WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156923
buildObjectForEventListener should not call into JSC with a null ExecState
https://bugs.webkit.org/show_bug.cgi?id=156923
Summary
buildObjectForEventListener should not call into JSC with a null ExecState
Keith Miller
Reported
2016-04-22 13:17:50 PDT
buildObjectForEventListener should not call into JSC with a null ExecState
Attachments
Patch
(1.90 KB, patch)
2016-04-22 13:24 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-04-22 13:24:42 PDT
Created
attachment 277091
[details]
Patch
Keith Miller
Comment 2
2016-04-22 13:29:02 PDT
<
rdar://problem/25341891
>
Joseph Pecoraro
Comment 3
2016-04-22 13:31:45 PDT
Comment on
attachment 277091
[details]
Patch r=me
Keith Miller
Comment 4
2016-04-22 14:15:05 PDT
rdar://problem/13282256
WebKit Commit Bot
Comment 5
2016-04-22 14:24:06 PDT
Comment on
attachment 277091
[details]
Patch Clearing flags on attachment: 277091 Committed
r199905
: <
http://trac.webkit.org/changeset/199905
>
WebKit Commit Bot
Comment 6
2016-04-22 14:24:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug